<resources>
    <string name="app_name">VehicleManager</string>
    <string name="title_activity_main_menu">MainActivityMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_main_text">Iniciar</string>


    <string name="item_txt_home">Inicio</string>
    <string name="item_txt_expenses">Gatos</string>
    <string name="item_txt_reminders">Recordatorios</string>
    <string name="item_txt_config">Configuración</string>
    <string name="item_txt_about">Acerca de</string>
    <string name="item_txt_tools">Herramientas</string>
    <string name="item_txt_category">Categorías</string>
    <string name="item_txt_cars">Carros</string>
    <string name="textview_txt_carname">Nombre del Carro</string>


    <string-array name="date_filter_spinner">
        <item>Mes</item>
        <item>Año</item>
        <item>Día</item>
    </string-array>
    <string-array name="time_reminder_spinner">
        <item>1 hora</item>
        <item>3 horas</item>
        <item>5 horas</item>
    </string-array>
    <string-array name="time_reminder2_spinner">
        <item>1 día</item>
        <item>3 dias</item>
        <item>5 dias</item>
    </string-array>

    <string-array name="selection_gallery_or_camera">
        <item>Galería</item>
        <item>Cámara</item>
    </string-array>

    <string name="car_name">NOMBRE</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="year">Año</string>
    <string name="name">Nombre:</string>
    <string name="odometer">Odómetro:</string>
    <string name="carplate">Placa:</string>
    <string name="gasoline">Gasolina:</string>
    <string name="aceppt">Aceptar</string>
    <string name="actual_car">Carro Actual:</string>
    <string name="edit_text_date_hint">día/mes/año</string>
    <string name="cancel">Cancelar</string>
    <string name="select_option">Seleccione opción</string>
    <string name="Successful_Event">Éxito</string>

    <string name="item_txt_expense">Agregar Gastos</string>
    <string name="item_txt_new_category">Agregar Categoría</string>
    <string name="item_txt_new_car">Agregar Carro</string>
    <string name="vehicle_txt_brand">Marca</string>
    <string name="cost">Cost</string>
    <string name="vehicle">Vehicle</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="open_calendar">Open Calendar</string>
    <string name="save">Save</string>
    <string name="toast_namedialogedit">Not saved, empty category name.</string>
    <string name="toast_unableto_loaddata">Unable to load data</string>
    <string name="take_picture">Take a Picture</string>
    <string name="error">Error</string>
    <string name="toast_couldnot_saveexp">Could not save expense</string>
    <string name="toast_val_addvehicle">Name of vehicle, carplate, year and odometer are required</string>


</resources>
