<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAddExpenses">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/item_txt_expenses"/>
        <EditText
            android:id="@+id/id_exp_add_edit_exp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textCapSentences"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/cost"/>
        <EditText
            android:id="@+id/id_cost_add_edit_exp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/vehicle"/>
        <Spinner
            android:id="@+id/id_vechicle_spinner_add_edit_exp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/odometer"/>
        <EditText
            android:id="@+id/id_odom_add_edit_exp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/item_txt_category"/>
        <Spinner
            android:id="@+id/id_category_add_edit_exp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/place"/>
        <EditText
            android:id="@+id/id_place_add_edit_exp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textCapSentences"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"/>
        <EditText
            android:id="@+id/id_date_text_add_edit_exp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"/>
        <ImageView
            android:id="@+id/id_calendar_add_edit_exp"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/date_picker"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/id_photo_add_edit_exp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:rotation="90"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/id_takePic_add_edit_exp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_photo_camera_black_24dp"/>
            <Button
                android:id="@+id/id_calendar_btn_add_edit_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_calendar"/>
            <Button
                android:id="@+id/id_save_add_edit_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</ScrollView>